...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drops.recyclerview.description.DescriptionNoteActivity">

    <Button
        android:id="@+id/save_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Save your Note "
        app:layout_constraintEnd_toEndOf="@+id/personalNote_textView"
        app:layout_constraintStart_toStartOf="@+id/personalNote_textView"
...
    <TextView
        android:id="@+id/personalNote_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/personalNote"
        app:layout_constraintStart_toStartOf="@+id/personalNote"
        app:layout_constraintTop_toBottomOf="@+id/personalNote" />

    <EditText
        android:id="@+id/personalNote"
        android:layout_width="wrap_content"
...
