...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textSize="24sp"
...
            app:icon="@drawable/ic_baseline_attach_money_24"
            app:iconGravity="end"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="686dp" />

        <Button
            android:id="@+id/description_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal Note"
            app:icon="@drawable/ic_baseline_notes_24"
            app:iconGravity="end"
            tools:layout_editor_absoluteX="128dp"
...
