<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInput_email"
        app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_darkmode"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/nightmode"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextInput_email" />

    <Switch
        android:id="@+id/switch_nightmode"
        android:layout_width="47dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toEndOf="@+id/textView_darkmode"
        app:layout_constraintTop_toBottomOf="@+id/TextInput_email" />

    <Button
        android:id="@+id/settings_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_darkmode" />

    <Button
        android:id="@+id/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/save"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_nightmode" />

    <Button
        android:id="@+id/settings_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_darkmode" />

    <Button
        android:id="@+id/settings_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_app"
        app:icon="@drawable/ic_baseline_share_24"
        app:iconGravity="end"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="352dp"
        />

    <Button
        android:id="@+id/settings_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        app:icon="@drawable/ic_baseline_contact_mail_24"
        app:iconGravity="end"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="592dp" />


    <Button
        android:id="@+id/settings_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_cons"
        app:icon="@drawable/ic_baseline_article_24"
        app:iconGravity="end"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="480dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="379dp"
        android:layout_height="226dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="36dp"
        app:constraint_referenced_ids="settings_support,settings_share,settings_privacy"
        app:flow_horizontalGap="25dp"
        app:flow_maxElementsWrap="1"
        app:flow_verticalAlign="center"
        app:flow_verticalBias="16"
        app:flow_verticalGap="30dp"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_logout"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="24dp"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>